<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pull_interact_name_tv">Connect Interact</string>
    <string name="pull_interact_name_url">Connect Input URL</string>
    <string name="pull_multi_interact_name_tv">Multi Connect Interact/PK</string>
    <string name="h5_compatible_name_tv">H5 Compatible</string>
    <string name="earback_open_without_headset">Earback Without Headset</string>
    <string name="data_channel_name_tv">Data Channel</string>
    <string name="external_audio_stream_tv">External Audio Stream</string>
    <string name="external_video_stream_tv">External Video Stream</string>
    <string name="dual_audio_stream">Push Dual Audio</string>
    <string name="screen_share_stream">Push Screen Share</string>
    <string name="change_resolution_and_fps">Change Resolution FPS</string>
    <string name="force_ear_monitor">Force Ear Monitor</string>
    <string name="push_interactive_setting_audio_only">Audio Only</string>
    <string name="push_interactive_setting_gop">GOP</string>
    <string name="push_interactive_setting_hardware_decode">Enable Hardware Decode</string>
    <string name="push_interactive_h265">H265</string>
    <string name="interact_live">Interact Live</string>
    <string name="interact_live_url_title">Interact Live URL</string>
    <string name="interact_live_push_url">Interact Live PUSH URL</string>
    <string name="interact_live_pull_url">Interact Live PULL URL</string>
    <string name="interact_start_push">Start Push</string>
    <string name="interact_stop_push">Stop Push</string>
    <string name="pk_live">PK Interaction</string>
    <string name="interact_setting">Interact Setting</string>
    <string name="interact_live_cancel">Cancel</string>
    <string name="interact_live_confirm">Confirm</string>
    <string name="interact_live_audio_stream_type">Audio Stream</string>
    <string name="interact_live_audio_stream_type_mic">Mic</string>
    <string name="interact_live_audio_stream_type_dual">Dual</string>
    <string name="interact_live_video_stream_type">Video Stream</string>
    <string name="interact_live_video_stream_type_camera">Camera</string>
    <string name="interact_live_video_stream_type_screen">Screen</string>
    <string name="interact_live_next">Next</string>
    <string name="interact_live_user_id">User ID</string>
    <string name="interact_live_room_id">Room ID</string>
    <string name="app_info">APP Info</string>
    <string name="app_info_app_id">App ID</string>
    <string name="app_info_app_key">App Key</string>
    <string name="app_info_play_domain">PlayDomain</string>
    <string name="interact_live_user_id_hint">Please enter letters and numbers</string>
    <string name="interact_live_anchor">anchor</string>
    <string name="interact_live_audience">audience</string>
    <string name="interact_input_limit">0/5</string>
    <string name="interact_start_connect">Connect</string>
    <string name="pk_start_connect">PK</string>
    <string name="interact_stop_connect">UnConnect</string>
    <string name="pk_stop_connect">EndPK</string>
    <string name="interact_live_connecting">Connecting</string>
    <string name="pk_live_connecting">Connecting</string>
    <string name="interact_live_connect_tips">Enter the User ID</string>
    <string name="interact_live_url_connect_tips">Enter the User URL</string>
    <string name="interact_live_connect_author_tips">Enter the author ID</string>
    <string name="interact_live_connect_room_tips">Enter the room ID</string>
    <string name="interact_live_connect_input_error_tips">Input content</string>
    <string name="interact_live_connect_finish_tips">End connect？</string>
    <string name="pk_live_connect_finish_tips">End PK？</string>
    <string name="interact_live_leave_room_tips">Leave room？</string>
    <string name="interact_live_viewer_left">Viewer Left</string>

    <string name="interact_live_lost_connect">Disconnect the link, please re-enter the live room</string>
    <string name="extern_stream_main">Main Extern Stream</string>
    <string name="beauty_switch">Beauty</string>
    <string name="waiting_download_video_resources">waiting for download external video resources</string>
    <string name="interact_live_setting_resolution">Resolution</string>
    <string name="target_bitrate">Target bitrate</string>
    <string name="target_rate_value">1200</string>
    <string name="captrue_fps">Captrue fps</string>
    <string name="init_fps">20</string>
    <string name="min_fps">Min fps</string>

    <string name="live_push_switch_to_facing_back_camera">Switch to facing back camera,before scanning code</string>
    <string name="tips_use_url_for_interactive">Use URL for interactive live</string>
    <string name="tips_interactive_url_use_different_sdkappid">The sdkAppId used in the URL is different from the one in the App Info. Please note that this may cause pulling stream failure!</string>
</resources>