<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="312dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_interact_live_dialog_bg">

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:textColor="#FCFCFD"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/view_horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_input_user_id"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_interact_live_edit_bg"
        android:gravity="start|center_vertical"
        android:hint="@string/interact_live_connect_author_tips"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="#E6E7EC"
        android:textColorHint="#747A8C"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_clear_user_id"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/et_input_user_id"
        app:layout_constraintEnd_toEndOf="@id/et_input_user_id"
        app:layout_constraintTop_toTopOf="@id/et_input_user_id" />

    <EditText
        android:id="@+id/et_input_room_id"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shape_interact_live_edit_bg"
        android:gravity="start|center_vertical"
        android:hint="@string/interact_live_connect_room_tips"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="#E6E7EC"
        android:textColorHint="#747A8C"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_user_id"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_clear_room_id"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/et_input_room_id"
        app:layout_constraintEnd_toEndOf="@id/et_input_room_id"
        app:layout_constraintTop_toTopOf="@id/et_input_room_id" />

    <EditText
        android:id="@+id/et_input_url"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shape_interact_live_edit_bg"
        android:gravity="start|center_vertical"
        android:hint="@string/interact_live_url_connect_tips"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="#E6E7EC"
        android:textColorHint="#747A8C"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_room_id"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_scan_qr"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/scan_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/et_input_url"
        app:layout_constraintEnd_toEndOf="@id/et_input_url"
        app:layout_constraintTop_toTopOf="@id/et_input_url" />

    <LinearLayout
        android:id="@+id/video_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_input_url">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/interact_live_video_stream_type"
            android:textColor="#FCFCFD" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/rg_video_stream_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/interact_live_video_stream_type_camera"
                android:textColor="#FCFCFD" />

            <RadioButton
                android:id="@+id/rb_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interact_live_video_stream_type_screen"
                android:textColor="#FCFCFD" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/audio_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/view_horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_radio_group">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/interact_live_audio_stream_type"
            android:textColor="#FCFCFD" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/rg_audio_stream_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_mic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/interact_live_audio_stream_type_mic"
                android:textColor="#FCFCFD" />

            <RadioButton
                android:id="@+id/rb_dual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/interact_live_audio_stream_type_dual"
                android:textColor="#FCFCFD" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:id="@+id/view_horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#3A3D48"
        app:layout_constraintBottom_toTopOf="@id/tv_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/interact_live_cancel"
        android:textColor="#B2B7C4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_vertical_line"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_vertical_line"
        android:layout_width="1dp"
        android:layout_height="48dp"
        android:background="#3A3D48"
        app:layout_constraintEnd_toStartOf="@id/tv_confirm"
        app:layout_constraintStart_toEndOf="@id/tv_cancel"
        app:layout_constraintTop_toTopOf="@id/tv_cancel" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/interact_live_confirm"
        android:textColor="#4DCFE1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_vertical_line" />

</androidx.constraintlayout.widget.ConstraintLayout>