<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1D22">

    <TextView
        android:id="@+id/tv_app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="39dp"
        android:text="@string/app_info"
        android:textColor="#FCFCFD"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        android:padding="8dp"
        android:src="@drawable/ic_chevron_down"
        app:layout_constraintBottom_toBottomOf="@id/tv_app_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_app_info" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_app_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/iv_arrow"
        app:layout_constraintStart_toStartOf="@id/tv_app_info"
        app:layout_constraintTop_toBottomOf="@id/tv_app_info"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_app_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_app_id"
            android:textColor="#B2B7C4"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#B2B7C4"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_app_id_title" />

        <TextView
            android:id="@+id/tv_app_key_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_info_app_key"
            android:textColor="#B2B7C4"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_id_title" />

        <TextView
            android:id="@+id/tv_app_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#B2B7C4"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_app_key_title" />

        <TextView
            android:id="@+id/tv_play_domain_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_info_play_domain"
            android:textColor="#B2B7C4"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_key_title" />

        <TextView
            android:id="@+id/tv_play_domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#B2B7C4"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_play_domain_title" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="16dp"
            android:layout_height="36dp"
            android:paddingVertical="10dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_play_domain" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#3A3D48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_app_info" />

</androidx.constraintlayout.widget.ConstraintLayout>